<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NouveauParcours">


         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

             <TextView
                 android:id="@+id/activity_parcours_nom"
                 android:layout_width="match_parent"
                 android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textSize="22sp"
                 android:layout_gravity="center"
                 android:textColor="@color/black"
                 android:text="@string/nouveau_parcours"
                 android:layout_marginBottom="20dp"
                 tools:ignore="RtlSymmetry"/>
             <TextView
                 android:id="@+id/activity_parcours_concours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:layout_gravity="center"
                 android:text="@string/concours"
                 tools:ignore="RtlSymmetry"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_parcours_concours_txt"
                 android:hint="@string/entrez_le_nom_du_concours"/>

             <TextView
                 android:id="@+id/activity_parcours_cavalier1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingStart="20dp"
                 android:text="@string/cavalier_1"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 tools:ignore="RtlSymmetry" />





             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_parcours_cavalier1_txt"
                 android:hint="@string/entrez_le_nom_du_premier_cavalier"/>

             <TextView
                 android:id="@+id/activity_parcours_cheval1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:layout_gravity="center"
                 android:text="@string/cheval_1"
                 tools:ignore="RtlSymmetry"/>

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_parcours_cheval1_txt"
                 android:hint="@string/entrez_le_nom_du_premier_cheval"/>

             <TextView
                 android:id="@+id/activity_parcours_cavalier2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:text="@string/cavalier2_1"
                 tools:ignore="RtlSymmetry"/>

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_parcours_cavalier2_txt"
                 android:hint="@string/entrez_le_nom_du_second_cavalier"/>

             <TextView
                 android:id="@+id/activity_parcours_cheval2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:text="@string/cheval_2"
                 tools:ignore="RtlSymmetry"/>

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/activity_parcours_cheval2_txt"
                 android:hint="@string/entrez_le_nom_du_second_cheval"/>

             <Switch
                 android:id="@+id/activity_parcours_loca"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:paddingEnd="25dp"
                 android:text="@string/localisation"
                 android:textSize="22sp" />

             <TextView android:id="@+id/t_coord"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/localisation2"/>

             <fragment
                 android:id="@+id/fragment_map"
                 android:name="com.example.csotracker.MyMapFragment"
                 android:layout_width="300dp"
                 android:layout_gravity="center"
                 android:layout_height="200dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />

             <TextView
                 android:id="@+id/activity_parcours_terrain"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textSize="22sp"
                 android:textColor="@color/black"
                 android:layout_gravity="center"
                 android:text="@string/terrain_parcours"
                 tools:ignore="RtlSymmetry"/>

             <Spinner
                 android:id="@+id/activity_parcours_terrain_spnr"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textSize="22sp"
                 android:autofillHints="Selectionnez le type de terrain"/>

             <TextView
                 android:id="@+id/activity_parcours_longueur"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:layout_gravity="center"
                 android:text="@string/longueur_du_parcours"
                 tools:ignore="RtlSymmetry"/>

             <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <RadioButton
                     android:id="@+id/activity_parcours_220"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:text="@string/_300_m_tres" />

                 <RadioButton
                     android:id="@+id/activity_parcours_600"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:textSize="20dp"
                     android:text="@string/_600_m_tre" />

             </RadioGroup>

             <Button
                 android:id="@+id/activity_parcours_valider"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="20dp"
                 android:onClick="onClick"
                 android:text="valider" />

             <Button
                 android:id="@+id/activity_parcours_demarrer"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_margin="20dp"
                 android:text="@string/d_marrer"/>
        </LinearLayout>




</ScrollView>