<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recap">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
    <TextView
        android:id="@+id/activity_recap_nom_activite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/r_capitulatif"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <!-- Tableau resultats -->
    <TableLayout
        android:id="@+id/activity_recap_tab_results"
        style="frag1TableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/activity_recap_TabRes_L1"
            style="frag1HeaderTableRow"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_recap_TabRes_vide"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_Points"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/points"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_Malus"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/malus"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_Total"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_Chrono"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/chrono"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/activity_recap_TabRes_L2"
            style="frag1TableRow"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_recap_TabRes_Cavalier1"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/cavalier1_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C1_points"
                style="frag1Col"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C1_malus"
                style="frag1Col"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C1_Total"
                style="frag1HeaderCol"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C1_chrono"
                style="frag1HeaderCol"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/activity_recap_TabRes_L3"
            style="frag1TableRow"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_recap_TabRes_Cavalier2"
                style="frag1HeaderCol"
                android:layout_weight="1"
                android:text="@string/cavalier2_2"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C2_points"
                style="frag1Col"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C2_malus"
                style="frag1Col"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C2_total"
                style="frag1HeaderCol"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_recap_TabRes_C2_chrono"
                style="frag1HeaderCol"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"

                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>   <!-- Tableau resultats -->

     <Button
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_margin="20dp"
         android:id="@+id/activity_recap_menu_btn"
         android:text="@string/menu_principal"/>
 </LinearLayout>
</ScrollView>